examples/errors/unknown_field_access/main.hd
struct Point {
    x: int,
    y: int
}

fn main(): int {
    let p = Point { x: 10, y: 20 };
    let z = p.z;
    return 0;
}
